@@ -87,4 +87,6 @@ Sandbox_EN = {
 	Sandbox_MoreTraits_ImmunoChance_tooltip = "Chance for a player with Immunocompromised to get infected by a zombie attack.<br>Setting this value to 100 will make every zombie attack infectious.",
 	Sandbox_MoreTraits_SuperImmuneWeakness = "Super Immune Weakness",
 	Sandbox_MoreTraits_SuperImmuneWeakness_tooltip = "If this setting is on, Super Immune will not be able to defend your body if it caught several infections.",
+	Sandbox_MoreTraits_BouncerDistance = "Bouncer Distance",
+    Sandbox_MoreTraits_BouncerDistance_tooltip = "The distance (in tile squares) from the player out to which Bouncer begins attempting to shove enemies away. <br>Lower values means Bouncer will take effect only at closer ranges to the player.",
 }
